# cookiecutter-hypermodern-python

./: README.md
{{cookiecutter.project_name}}/: README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.md
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
