[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.friendly_name}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src" },
]
{% endif -%}
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.test.dependencies]
coverage = {extras = ["toml"], version = ">=6.2"}
pytest = ">=6.2.5"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.group.lint.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
darglint = ">=1.8.1"
mypy = ">=0.930"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
ruff = ">= 0.0.237"

[tool.poetry.group.docs.dependencies]
numpydoc = ">=1.5.0"
pydata-sphinx-theme = ">=0.12.0"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx_copybutton = ">=0.5.1"
myst-parser = {version = ">=0.16.1"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.ruff]
select = [
  # pycodestyle
  "E",
  "W",
  # Pyflakes
  "F",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # flake8-docstrings
  "D",
  # isort
  "I001",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # flake8-quotes
  "Q",
  # pyupgrade
  "UP",
  # flake8-pytest-style
  "PT",
]
ignore = ["E203","E501","W503"]

[tool.ruff.flake8-docstrings]
convention = "numpy"

[tool.ruff.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
